# service-request-map

./: README.md  notes.txt  pyproject.toml
.github/: deploy.yml  fetch_data.yml
.github/workflows/: deploy.yml
data/: sr_data.parquet  zip_geo.parquet
docs/: index.html
docs/assets/: index-DEPjuBkG.js
notebooks/: sr_heat.py  sr_heat_dynamic.py
src/service_request_map/: __init__.py  main.py
src/service_request_map/extract/: get_sr_socrata.py  get_zip_geojson.py
src/service_request_map/utils/: config_paths.py  socrata.py  znzcta.geojson
