[project]
name = "service-request-map"
version = "0.1.0"
description = "Map service requests"
readme = "README.md"
authors = [
    { name = "Tara Sullivan", email = "tsullivan126@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.0",
    "fastparquet>=2025.12.0",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "marimo>=0.20.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openlayers>=0.1.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "sodapy>=2.2.0",
    "sqlglot>=29.0.1",
    "statsmodels>=0.14.6",
    "tabulate>=0.9.0",
]

[project.scripts]
service-request-map = "service_request_map:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
